# starting-ragchatbot-codebase

./: .coverage  CLAUDE.md  check-all.sh  format.sh  lint.sh  pyproject.toml  run.sh
.claude/: settings.local.json
.claude/commands/: implement-fetuare.md
.github/workflows/: claude.yml
backend/: .flake8  TEST_REPORT.md  ai_generator.py  app.py  backend-tool-refactor.md  pytest.ini  search_tools.py  vector_store.py
backend/tests/: TESTING.md  __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_app.py  test_rag_system.py  test_real_system_integration.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
