[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "anthropic==0.58.2",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "pdfplumber>=0.11.8",
    "paddleocr>=3.3.2",
    "easyocr>=1.7.2",
    "pymupdf>=1.26.7",
]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--asyncio-mode=auto"
]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "api: API endpoint tests",
    "slow: Slow running tests"
]
